# python_v

./: .gitignore  02_modules.ipynb  05_classes.ipynb  06_exceptions.ipynb  07_filesystem.ipynb  08_projects.ipynb  09_testing.ipynb  exercises.md  links.md  mk_2pdf.sh  mkslides.bat  mkslides.sh
01_examples/: argparse_ex.py  findany.py  findargp.py  findpython.py
02_examples/: conv_script.py  convert.py  module.py
02_examples/convpack/: __init__.py  fluid.py  length.py  temp.py
02_examples/mypackage/: __init__.py  mymodule.py
03_examples/: passwd.txt  readpw.py
04_examples/: integra.py  leapyear.py
05_examples/: classes.py
06_examples/: sumfile.py
07_examples/: data.csv  data.json  data.sqlite3  dumpjson.py  loadjson.py  readcsv.py  readxml.py  splitcities.py  sqlreadwrite.py  writecsv.py
data/: passwd.txt
examples/: logexample1.py  logexample2.py  logging.conf  logsingleton.py  mymodule.py  scrape.py  test_mymodule.py  typetest.py
exercises/01_interpreter/: findany.py  findpython.py
exercises/02_modules/: conv_script_module.py  conv_script_package.py  convert.py
exercises/03_datastructures/: readpw_01.py  readpw_02.py  readpw_03.py  readpw_04.py
exercises/04_functions/: integra.py  leapyear.py
exercises/05_classes/: booklibrary.py  publications.py
markdown/: exercises.md  toc.md
media/: namespaces.dia
notebooks/: 01_interpreter.ipynb  03_datastructures.ipynb  04_functions.ipynb  07_filesystem.ipynb  08_projects.ipynb  09_testing.ipynb
solutions/08_projects/bookie/: pyproject.toml
solutions/08_projects/bookie/src/bookie/: race.py
(+75 files in other folders)
